# burning-cost-examples

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
examples/: causal_forest_demo.py  causal_rate_change_evaluation.py  champion_challenger_deployment.py  conformal_prediction_intervals.py  end_to_end_motor_pricing.py  fca_compliance_pipeline.py  gbm_to_glm_pipeline.py  gbm_to_tariff_pipeline.py  model_drift_monitoring.py  pareto_optimisation_demo.py  price_elasticity_optimisation.py  regulatory_compliance_pipeline.py  sequential_testing_demo.py  thin_data_pipeline.py
notebooks/: automl_benchmark_fremtpl2.py  bayesian_pricing_demo.py  burning_cost_30_minutes.ipynb  burning_cost_30_minutes.py  causal_forest_demo.py  causal_rate_change_evaluation.py  champion_challenger_deployment.py  conformal_prediction_intervals.py  databricks-starter.py  end_to_end_motor_pricing.py  experience_rating_demo.py  fairness_audit_demo.py  fca_compliance_pipeline.py  fca_model_governance_pipeline.py  gbm_to_glm_pipeline.py  gbm_to_tariff_pipeline.py  insurance_causal_demo.py  insurance_conformal_ts_demo.py  insurance_covariate_shift_demo.py  insurance_credibility_demo.py  insurance_datasets_demo.py  insurance_demand_demo.py  insurance_dispersion_demo.py  insurance_distill_demo.py  insurance_distributional_demo.py  insurance_distributional_glm_demo.py  insurance_dynamics_demo.py  insurance_frequency_severity_demo.py  insurance_gam_demo.py  insurance_glm_tools_demo.py  insurance_governance_demo.py  insurance_interactions_demo.py  insurance_multilevel_demo.py  insurance_optimise_demo.py  insurance_quantile_demo.py  insurance_severity_demo.py  insurance_survival_demo.py  insurance_telematics_demo.py  insurance_thin_data_demo.py  insurance_trend_demo.py  (+13 more)
